add function to remove mappings.
