# swagger_schemas/swagger/json/crestdb_full.json
@@ -477,7 +477,7 @@
 					}
 				}
 			}
-		},
+          },
 		"/globaltagmaps/{name}": {
 			"get": {
 				"tags": [
@@ -513,7 +513,59 @@
 						}
 					}
 				}
-			}
+			},
+            "delete": {
+                "tags": [
+                    "globaltagmaps"
+                ],
+                "summary": "Delete GlobalTagMapDto lists.",
+                "description": "This method search for mappings using the global tag name and deletes all mappings.",
+                "operationId": "deleteGlobalTagMap",
+                "produces": [
+                    "application/json",
+                    "application/xml"
+                ],
+                "parameters": [
+                    {
+                        "name": "name",
+                        "in": "path",
+                        "description": "the global tag name",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "label",
+                        "in": "query",
+                        "description": "label: the generic name labelling all tags of a certain kind.",
+                        "required": true,
+                        "type": "string",
+                        "default": "none"
+                    },
+                    {
+                        "name": "record",
+                        "in": "query",
+                        "description": "record: the record.",
+                        "required": false,
+                        "type": "string"
+                    },
+                    {
+                        "name": "tagname",
+                        "in": "query",
+                        "description": "tagname: the name of the tag associated.",
+                        "required": true,
+                        "type": "string",
+                        "default": "none"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "successful operation",
+                        "schema": {
+                            "$ref": "#/definitions/GlobalTagMapSetDto"
+                        }
+                    }
+                }
+            }
 		},
 		"/globaltags": {
 			"get": {
